refactor: align coding standards and agent skills (#323)