@@ -19,8 +19,6 @@
 
 package com.alibaba.himarket.service.gateway;
 
-import cn.hutool.core.codec.Base64;
-import cn.hutool.core.util.StrUtil;
 import com.alibaba.himarket.core.exception.BusinessException;
 import com.alibaba.himarket.core.exception.ErrorCode;
 import com.alibaba.himarket.dto.result.agent.AgentAPIResult;
@@ -39,21 +37,37 @@ import com.alibaba.himarket.dto.result.model.ModelConfigResult;
 import com.alibaba.himarket.entity.Gateway;
 import com.alibaba.himarket.entity.ProductRef;
 import com.alibaba.himarket.service.gateway.client.APIGClient;
+import com.alibaba.himarket.support.common.Strings;
 import com.alibaba.himarket.support.consumer.APIGAuthConfig;
 import com.alibaba.himarket.support.consumer.ConsumerAuthConfig;
-import com.alibaba.himarket.support.enums.*;
+import com.alibaba.himarket.support.enums.APIGAPIType;
+import com.alibaba.himarket.support.enums.APIGResourceType;
+import com.alibaba.himarket.support.enums.GatewayType;
+import com.alibaba.himarket.support.enums.McpFromType;
+import com.alibaba.himarket.support.enums.McpProtocolType;
+import com.alibaba.himarket.support.enums.ProductType;
 import com.alibaba.himarket.support.mcp.OpenAPIToolsConfigConverter;
 import com.alibaba.himarket.support.product.APIGRefConfig;
 import com.alibaba.himarket.utils.JsonUtil;
 import com.aliyun.sdk.gateway.pop.exception.PopClientException;
-import com.aliyun.sdk.service.apig20240327.models.*;
+import com.aliyun.sdk.service.apig20240327.models.CreateConsumerAuthorizationRulesRequest;
+import com.aliyun.sdk.service.apig20240327.models.CreateConsumerAuthorizationRulesResponse;
+import com.aliyun.sdk.service.apig20240327.models.GetMcpServerRequest;
+import com.aliyun.sdk.service.apig20240327.models.GetMcpServerResponse;
+import com.aliyun.sdk.service.apig20240327.models.GetMcpServerResponseBody;
+import com.aliyun.sdk.service.apig20240327.models.HttpApiApiInfo;
+import com.aliyun.sdk.service.apig20240327.models.HttpRoute;
+import com.aliyun.sdk.service.apig20240327.models.ListMcpServersRequest;
+import com.aliyun.sdk.service.apig20240327.models.ListMcpServersResponse;
+import com.aliyun.sdk.service.apig20240327.models.QueryConsumerAuthorizationRulesRequest;
+import com.aliyun.sdk.service.apig20240327.models.QueryConsumerAuthorizationRulesResponse;
+import com.aliyun.sdk.service.apig20240327.models.QueryConsumerAuthorizationRulesResponseBody;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
@@ -81,26 +95,18 @@ public class AIGWOperator extends APIGOperator {
             throw new BusinessException(ErrorCode.INTERNAL_ERROR, result.getBody().getMessage());
         }
 
-        List<APIGMcpServerResult> mcpServers =
-                Optional.ofNullable(result.getBody().getData().getItems())
-                        .map(
-                                items ->
-                                        items.stream()
-                                                .map(
-                                                        item -> {
-                                                            APIGMcpServerResult mcpServer =
-                                                                    new APIGMcpServerResult();
-                                                            mcpServer.setMcpServerId(
-                                                                    item.getMcpServerId());
-                                                            mcpServer.setMcpServerName(
-                                                                    item.getName());
-                                                            mcpServer.setApiId(item.getApiId());
-                                                            mcpServer.setMcpRouteId(
-                                                                    item.getRouteId());
-                                                            return mcpServer;
-                                                        })
-                                                .collect(Collectors.toList()))
-                        .orElse(new ArrayList<>());
+        var items = result.getBody().getData().getItems();
+        List<APIGMcpServerResult> mcpServers = new ArrayList<>();
+        if (items != null) {
+            for (var item : items) {
+                APIGMcpServerResult mcpServer = new APIGMcpServerResult();
+                mcpServer.setMcpServerId(item.getMcpServerId());
+                mcpServer.setMcpServerName(item.getName());
+                mcpServer.setApiId(item.getApiId());
+                mcpServer.setMcpRouteId(item.getRouteId());
+                mcpServers.add(mcpServer);
+            }
+        }
 
         return PageResult.of(mcpServers, page, size, result.getBody().getData().getTotalSize());
     }
@@ -130,30 +136,30 @@ public class AIGWOperator extends APIGOperator {
         String path = resp.getMcpServerPath();
         String exposedUriPath = resp.getExposedUriPath();
         boolean protocolCompatible =
-                StrUtil.equalsIgnoreCase(resp.getCreateFromType(), "ApiGatewayProxyMcpHosting");
-        if (!protocolCompatible && StrUtil.isNotBlank(exposedUriPath)) {
+                Strings.equalsIgnoreCase(resp.getCreateFromType(), "ApiGatewayProxyMcpHosting");
+        if (!protocolCompatible && Strings.isNotBlank(exposedUriPath)) {
             path += exposedUriPath;
         }
         serverConfig.setPath(path);
 
         // default domains in gateway
         List<DomainResult> defaultDomains = fetchDefaultDomains(gateway);
-        List<DomainResult> mcpDomains =
-                Optional.ofNullable(resp.getDomainInfos()).orElse(Collections.emptyList()).stream()
-                        .map(
-                                d ->
-                                        DomainResult.builder()
-                                                .domain(d.getName())
-                                                .protocol(
-                                                        Optional.ofNullable(d.getProtocol())
-                                                                .map(String::toLowerCase)
-                                                                .orElse(null))
-                                                .build())
-                        .toList();
-
-        serverConfig.setDomains(
-                Stream.concat(mcpDomains.stream(), defaultDomains.stream())
-                        .collect(Collectors.toList()));
+        List<DomainResult> domains = new ArrayList<>();
+        if (resp.getDomainInfos() != null) {
+            for (var domainInfo : resp.getDomainInfos()) {
+                String protocol =
+                        domainInfo.getProtocol() == null
+                                ? null
+                                : domainInfo.getProtocol().toLowerCase();
+                domains.add(
+                        DomainResult.builder()
+                                .domain(domainInfo.getName())
+                                .protocol(protocol)
+                                .build());
+            }
+        }
+        domains.addAll(defaultDomains);
+        serverConfig.setDomains(domains);
         mcpConfig.setMcpServerConfig(serverConfig);
 
         mcpConfig.setProtocol(
@@ -161,7 +167,7 @@ public class AIGWOperator extends APIGOperator {
                         ? McpProtocolType.DUAL_HTTP
                         : McpProtocolType.fromString(resp.getProtocol()));
         mcpConfig.setFromType(
-                !protocolCompatible && StrUtil.equalsIgnoreCase(resp.getProtocol(), "HTTP")
+                !protocolCompatible && Strings.equalsIgnoreCase(resp.getProtocol(), "HTTP")
                         ? McpFromType.HTTP_TO_MCP
                         : McpFromType.NATIVE_MCP);
 
@@ -171,12 +177,25 @@ public class AIGWOperator extends APIGOperator {
 
         // tools
         String tools = resp.getMcpServerConfig();
-        if (StrUtil.isNotBlank(tools)) {
-            String decodedTools = Base64.isBase64(tools) ? Base64.decodeStr(tools) : tools;
+        if (Strings.isNotBlank(tools)) {
+            String decodedTools = decodeBase64IfNeeded(tools);
             mcpConfig.setTools(OpenAPIToolsConfigConverter.convertRawConfigToJson(decodedTools));
         }
 
         return JsonUtil.toJson(mcpConfig);
+    }
+
+    private String decodeBase64IfNeeded(String value) {
+        try {
+            byte[] decoded = Base64.getDecoder().decode(value);
+            if (value.equals(Base64.getEncoder().encodeToString(decoded))
+                    || value.equals(Base64.getEncoder().withoutPadding().encodeToString(decoded))) {
+                return new String(decoded, StandardCharsets.UTF_8);
+            }
+        } catch (IllegalArgumentException ignored) {
+            return value;
+        }
+        return value;
     }
 
     private GetMcpServerResponseBody.Data getMcpServer(Gateway gateway, String mcpServerId) {
@@ -205,7 +224,7 @@ public class AIGWOperator extends APIGOperator {
         }
 
         APIGRefConfig config = productRef.getApigRefConfig();
-        if (config == null || StrUtil.isBlank(config.getMcpRouteId())) {
+        if (config == null || Strings.isBlank(config.getMcpRouteId())) {
             return new CredentialContext();
         }
 
@@ -225,14 +244,17 @@ public class AIGWOperator extends APIGOperator {
             throw new BusinessException(ErrorCode.GATEWAY_ERROR, response.getBody().getMessage());
         }
 
-        return Optional.ofNullable(response.getBody())
-                .map(QueryConsumerAuthorizationRulesResponseBody::getData)
-                .map(QueryConsumerAuthorizationRulesResponseBody.Data::getItems)
-                .filter(items -> !items.isEmpty())
-                .map(items -> items.get(0).getConsumerId())
-                .filter(StrUtil::isNotBlank)
-                .map(consumerId -> fetchConsumerCredential(gateway, consumerId))
-                .orElseGet(() -> CredentialContext.builder().build());
+        QueryConsumerAuthorizationRulesResponseBody body = response.getBody();
+        if (body == null || body.getData() == null || body.getData().getItems() == null) {
+            return CredentialContext.builder().build();
+        }
+
+        var items = body.getData().getItems();
+        if (items.isEmpty() || Strings.isBlank(items.get(0).getConsumerId())) {
+            return CredentialContext.builder().build();
+        }
+
+        return fetchConsumerCredential(gateway, items.get(0).getConsumerId());
     }
 
     @Override
@@ -278,7 +300,7 @@ public class AIGWOperator extends APIGOperator {
         List<HttpRouteResult> routeResults =
                 httpRoutes.getContent().stream()
                         .map(httpRoute -> new HttpRouteResult().convertFrom(httpRoute, apiDomains))
-                        .collect(Collectors.toList());
+                        .toList();
 
         AgentConfigResult.AgentAPIConfig agentAPIConfig =
                 AgentConfigResult.AgentAPIConfig.builder()
@@ -311,7 +333,7 @@ public class AIGWOperator extends APIGOperator {
         List<HttpRouteResult> routeResults =
                 httpRoutes.getContent().stream()
                         .map(httpRoute -> new HttpRouteResult().convertFrom(httpRoute, apiDomains))
-                        .collect(Collectors.toList());
+                        .toList();
 
         ModelConfigResult.ModelAPIConfig apiConfig =
                 ModelConfigResult.ModelAPIConfig.builder()
@@ -338,10 +360,10 @@ public class AIGWOperator extends APIGOperator {
 
         APIGResourceType resourceType;
         String resourceId;
-        if (StrUtil.isNotBlank(config.getMcpRouteId())) {
+        if (Strings.isNotBlank(config.getMcpRouteId())) {
             resourceType = APIGResourceType.MCP;
             resourceId = config.getMcpRouteId();
-        } else if (StrUtil.isNotBlank(config.getAgentApiId())) {
+        } else if (Strings.isNotBlank(config.getAgentApiId())) {
             resourceType = APIGResourceType.Agent;
             resourceId = config.getAgentApiId();
         } else {
@@ -399,17 +421,19 @@ public class AIGWOperator extends APIGOperator {
                         gateway, consumerId, resourceType.getType(), resourceId);
             }
             log.error(
-                    "Error authorizing consumer {} to {}:{} in AI gateway {}",
+                    "Failed to authorize AI gateway consumer, consumerId={}, resourceType={},"
+                            + " resourceId={}, gatewayId={}, errorMessage={}",
                     consumerId,
                     resourceType,
                     resourceId,
                     gateway.getGatewayId(),
+                    e.getMessage(),
                     e);
             throw new BusinessException(
                     ErrorCode.GATEWAY_ERROR,
-                    StrUtil.format(
-                                    "Failed to authorize consumer to {} in AI gateway: ",
-                                    resourceType)
+                    "Failed to authorize consumer to "
+                            + resourceType
+                            + " in AI gateway: "
                             + e.getMessage());
         }
     }
