@@ -19,7 +19,6 @@
 
 package com.alibaba.himarket.service.impl;
 
-import cn.hutool.core.util.StrUtil;
 import com.alibaba.himarket.core.constant.Resources;
 import com.alibaba.himarket.core.exception.BusinessException;
 import com.alibaba.himarket.core.exception.ErrorCode;
@@ -37,6 +36,7 @@ import com.alibaba.himarket.entity.SandboxInstance;
 import com.alibaba.himarket.repository.McpServerEndpointRepository;
 import com.alibaba.himarket.repository.SandboxInstanceRepository;
 import com.alibaba.himarket.service.SandboxService;
+import com.alibaba.himarket.support.common.Strings;
 import com.alibaba.himarket.support.enums.McpHostingType;
 import com.alibaba.himarket.utils.JsonUtil;
 import com.fasterxml.jackson.databind.node.ObjectNode;
@@ -44,7 +44,6 @@ import io.fabric8.kubernetes.client.KubernetesClient;
 import jakarta.persistence.criteria.Predicate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DataIntegrityViolationException;
@@ -55,14 +54,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
-@RequiredArgsConstructor
 @Slf4j
+@RequiredArgsConstructor
 public class SandboxServiceImpl implements SandboxService {
 
     private final SandboxInstanceRepository sandboxInstanceRepository;
     private final McpServerEndpointRepository mcpServerEndpointRepository;
     private final ContextHolder contextHolder;
     private final com.alibaba.himarket.service.sandbox.SandboxHealthCheckTask healthCheckTask;
+    private final K8sClientUtils k8sClientUtils;
 
     @Override
     public List<SandboxSimpleResult> listMcpCapableSandboxes() {
@@ -78,7 +78,7 @@ public class SandboxServiceImpl implements SandboxService {
                                         .sandboxId(s.getSandboxId())
                                         .sandboxName(s.getSandboxName())
                                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -100,19 +100,19 @@ public class SandboxServiceImpl implements SandboxService {
     public void importSandbox(ImportSandboxParam param) {
         String adminId = contextHolder.getUser();
 
-        // 检查同名实例（全局唯一）
+        // Sandbox names are globally unique.
         sandboxInstanceRepository
                 .findBySandboxName(param.getSandboxName())
                 .ifPresent(
                         existing -> {
                             throw new BusinessException(
                                     ErrorCode.CONFLICT,
-                                    StrUtil.format("实例名称'{}'已存在", param.getSandboxName()));
+                                    "Sandbox name '" + param.getSandboxName() + "' already exists");
                         });
 
-        // 从KubeConfig连接集群获取信息
+        // Connect with KubeConfig to resolve cluster metadata.
         try {
-            KubernetesClient client = K8sClientUtils.getClient(param.getKubeConfig());
+            KubernetesClient client = k8sClientUtils.getClient(param.getKubeConfig());
             String apiServer = K8sClientUtils.getApiServer(client);
             String clusterAttribute = buildClusterAttribute(client);
 
@@ -127,10 +127,14 @@ public class SandboxServiceImpl implements SandboxService {
         } catch (BusinessException e) {
             throw e;
         } catch (DataIntegrityViolationException e) {
-            throw new BusinessException(ErrorCode.CONFLICT, "沙箱实例已存在（并发冲突），请勿重复导入");
+            throw new BusinessException(
+                    ErrorCode.CONFLICT,
+                    "Sandbox instance already exists due to a concurrent conflict. Do not import it"
+                            + " again");
         } catch (Exception e) {
             throw new BusinessException(
-                    ErrorCode.INVALID_PARAMETER, "无法连接K8s集群: " + e.getMessage());
+                    ErrorCode.INVALID_PARAMETER,
+                    "Failed to connect to K8s cluster: " + e.getMessage());
         }
     }
 
@@ -139,33 +143,36 @@ public class SandboxServiceImpl implements SandboxService {
     public void updateSandbox(String sandboxId, UpdateSandboxParam param) {
         SandboxInstance sandbox = findSandbox(sandboxId);
 
-        // 如果修改了名称，检查是否重复（全局唯一）
-        if (StrUtil.isNotBlank(param.getSandboxName())
-                && !StrUtil.equals(sandbox.getSandboxName(), param.getSandboxName())) {
+        // When the name changes, keep the global uniqueness check.
+        if (Strings.isNotBlank(param.getSandboxName())
+                && !Strings.equals(sandbox.getSandboxName(), param.getSandboxName())) {
             sandboxInstanceRepository
                     .findBySandboxName(param.getSandboxName())
                     .ifPresent(
                             existing -> {
                                 throw new BusinessException(
                                         ErrorCode.CONFLICT,
-                                        StrUtil.format("实例名称'{}'已存在", param.getSandboxName()));
+                                        "Sandbox name '"
+                                                + param.getSandboxName()
+                                                + "' already exists");
                             });
         }
 
-        // 如果更新了KubeConfig，重新获取集群信息
-        if (StrUtil.isNotBlank(param.getKubeConfig())) {
-            if (StrUtil.isNotBlank(sandbox.getKubeConfig())) {
-                K8sClientUtils.evictClient(sandbox.getKubeConfig());
+        // Refresh cluster metadata when KubeConfig changes.
+        if (Strings.isNotBlank(param.getKubeConfig())) {
+            if (Strings.isNotBlank(sandbox.getKubeConfig())) {
+                k8sClientUtils.evictClient(sandbox.getKubeConfig());
             }
             try {
-                KubernetesClient client = K8sClientUtils.getClient(param.getKubeConfig());
+                KubernetesClient client = k8sClientUtils.getClient(param.getKubeConfig());
                 sandbox.setApiServer(K8sClientUtils.getApiServer(client));
                 sandbox.setClusterAttribute(buildClusterAttribute(client));
             } catch (BusinessException e) {
                 throw e;
             } catch (Exception e) {
                 throw new BusinessException(
-                        ErrorCode.INVALID_PARAMETER, "无法连接K8s集群: " + e.getMessage());
+                        ErrorCode.INVALID_PARAMETER,
+                        "Failed to connect to K8s cluster: " + e.getMessage());
             }
         }
 
@@ -173,7 +180,7 @@ public class SandboxServiceImpl implements SandboxService {
         try {
             sandboxInstanceRepository.saveAndFlush(sandbox);
         } catch (DataIntegrityViolationException e) {
-            throw new BusinessException(ErrorCode.CONFLICT, "沙箱实例更新冲突，请重试");
+            throw new BusinessException(ErrorCode.CONFLICT, "Sandbox update conflict. Try again");
         }
     }
 
@@ -182,21 +189,21 @@ public class SandboxServiceImpl implements SandboxService {
     public void deleteSandbox(String sandboxId) {
         SandboxInstance sandbox = findSandbox(sandboxId);
 
-        // 检查是否有 MCP endpoint 正在使用该沙箱
         var activeEndpoints =
                 mcpServerEndpointRepository.findByHostingTypeAndHostingInstanceId(
                         McpHostingType.SANDBOX.name(), sandboxId);
         if (!activeEndpoints.isEmpty()) {
             throw new BusinessException(
                     ErrorCode.CONFLICT,
-                    StrUtil.format(
-                            "该沙箱实例仍有 {} 个 MCP 部署在使用，请先取消相关订阅或删除 MCP 配置后再删除沙箱",
-                            activeEndpoints.size()));
+                    "This sandbox instance is still used by "
+                            + activeEndpoints.size()
+                            + " MCP deployments. Cancel the related subscriptions or delete the"
+                            + " MCP configs before deleting the sandbox");
         }
 
-        // 清除K8s client缓存
-        if (StrUtil.isNotBlank(sandbox.getKubeConfig())) {
-            K8sClientUtils.evictClient(sandbox.getKubeConfig());
+        // Evict the K8s client cache when the sandbox is removed.
+        if (Strings.isNotBlank(sandbox.getKubeConfig())) {
+            k8sClientUtils.evictClient(sandbox.getKubeConfig());
         }
         sandboxInstanceRepository.delete(sandbox);
     }
@@ -205,7 +212,7 @@ public class SandboxServiceImpl implements SandboxService {
     public SandboxResult healthCheck(String sandboxId) {
         SandboxInstance sandbox = findSandbox(sandboxId);
         healthCheckTask.checkOne(sandbox);
-        // 重新读取更新后的状态
+        // Reload the latest status after the health check updates the entity.
         sandbox = findSandbox(sandboxId);
         return new SandboxResult().convertFrom(sandbox);
     }
@@ -213,7 +220,7 @@ public class SandboxServiceImpl implements SandboxService {
     @Override
     public ClusterInfoResult fetchClusterInfo(String kubeConfig) {
         try {
-            KubernetesClient client = K8sClientUtils.getClient(kubeConfig);
+            KubernetesClient client = k8sClientUtils.getClient(kubeConfig);
             return ClusterInfoResult.builder()
                     .ok(true)
                     .clusterAttribute(buildClusterAttribute(client))
@@ -221,7 +228,11 @@ public class SandboxServiceImpl implements SandboxService {
                     .namespaces(K8sClientUtils.listNamespaces(client))
                     .build();
         } catch (Exception e) {
-            log.error("获取集群信息失败", e);
+            log.error(
+                    "Failed to fetch cluster information, errorType={}, errorMessage={}",
+                    e.getClass().getSimpleName(),
+                    e.getMessage(),
+                    e);
             String errMsg = e.getMessage();
             if (errMsg == null || errMsg.isBlank()) {
                 errMsg = e.getClass().getSimpleName();
@@ -237,15 +248,16 @@ public class SandboxServiceImpl implements SandboxService {
     @Override
     public List<String> listNamespaces(String sandboxId) {
         SandboxInstance sandbox = findSandbox(sandboxId);
-        if (StrUtil.isBlank(sandbox.getKubeConfig())) {
-            throw new BusinessException(ErrorCode.INVALID_REQUEST, "沙箱实例未配置 KubeConfig");
+        if (Strings.isBlank(sandbox.getKubeConfig())) {
+            throw new BusinessException(
+                    ErrorCode.INVALID_REQUEST, "Sandbox instance has no KubeConfig");
         }
         try {
-            KubernetesClient client = K8sClientUtils.getClient(sandbox.getKubeConfig());
+            KubernetesClient client = k8sClientUtils.getClient(sandbox.getKubeConfig());
             return K8sClientUtils.listNamespaces(client);
         } catch (Exception e) {
             throw new BusinessException(
-                    ErrorCode.INTERNAL_ERROR, "获取 Namespace 列表失败: " + e.getMessage());
+                    ErrorCode.INTERNAL_ERROR, "Failed to list namespaces: " + e.getMessage());
         }
     }
 
@@ -278,13 +290,14 @@ public class SandboxServiceImpl implements SandboxService {
         return (root, query, cb) -> {
             List<Predicate> predicates = new ArrayList<>();
 
-            if (param != null && StrUtil.isNotBlank(param.getSandboxType())) {
+            if (param != null && Strings.isNotBlank(param.getSandboxType())) {
                 predicates.add(cb.equal(root.get("sandboxType"), param.getSandboxType()));
             }
 
             String adminId = contextHolder.getUser();
-            if (StrUtil.isBlank(adminId)) {
-                throw new BusinessException(ErrorCode.UNAUTHORIZED, "未获取到当前用户信息");
+            if (Strings.isBlank(adminId)) {
+                throw new BusinessException(
+                        ErrorCode.UNAUTHORIZED, "Current user information is unavailable");
             }
             predicates.add(cb.equal(root.get("adminId"), adminId));
 
