@@ -1,8 +1,5 @@
 package com.alibaba.himarket.service.impl;
 
-import cn.hutool.core.collection.CollUtil;
-import cn.hutool.core.util.StrUtil;
-import cn.hutool.core.util.URLUtil;
 import com.alibaba.himarket.core.constant.Resources;
 import com.alibaba.himarket.core.exception.BusinessException;
 import com.alibaba.himarket.core.exception.ErrorCode;
@@ -19,22 +16,33 @@ import com.alibaba.himarket.entity.Product;
 import com.alibaba.himarket.repository.ProductRepository;
 import com.alibaba.himarket.service.NacosService;
 import com.alibaba.himarket.service.WorkerService;
+import com.alibaba.himarket.support.common.Strings;
 import com.alibaba.himarket.support.enums.ProductStatus;
 import com.alibaba.himarket.support.enums.ProductType;
 import com.alibaba.himarket.support.product.ProductFeature;
 import com.alibaba.himarket.support.product.WorkerConfig;
 import com.alibaba.himarket.utils.JsonUtil;
-import com.alibaba.nacos.api.ai.model.agentspecs.*;
+import com.alibaba.nacos.api.ai.model.agentspecs.AgentSpec;
+import com.alibaba.nacos.api.ai.model.agentspecs.AgentSpecMeta;
+import com.alibaba.nacos.api.ai.model.agentspecs.AgentSpecResource;
+import com.alibaba.nacos.api.ai.model.agentspecs.AgentSpecSummary;
 import com.alibaba.nacos.api.exception.NacosException;
 import com.alibaba.nacos.api.model.Page;
 import com.alibaba.nacos.maintainer.client.ai.AgentSpecMaintainerService;
 import com.alibaba.nacos.maintainer.client.ai.AiMaintainerService;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 import lombok.Data;
@@ -42,6 +50,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 @Service
@@ -71,21 +80,23 @@ public class WorkerServiceImpl implements WorkerService {
 
         WorkerConfig config = product.getFeature().getWorkerConfig();
 
-        if (StrUtil.isBlank(ref.getAgentSpecName())) {
+        if (Strings.isBlank(ref.getAgentSpecName())) {
             // First upload: use overwrite mode in case Nacos already has an agent spec with the
             // same name
             String agentSpecName =
                     execute(
                             ref.getNacosId(),
                             s -> s.uploadAgentSpecFromZip(ref.getNamespace(), zipBytes, true));
-            log.info("Uploaded new AgentSpec draft: {}", agentSpecName);
+            log.info("Uploaded new AgentSpec draft, agentSpecName={}", agentSpecName);
             config.setAgentSpecName(agentSpecName);
         } else {
             // Subsequent upload: use overwrite mode to bypass reviewing version blocking
             execute(
                     ref.getNacosId(),
                     s -> s.uploadAgentSpecFromZip(ref.getNamespace(), zipBytes, true));
-            log.info("Uploaded (overwrite) for AgentSpec {}", ref.getAgentSpecName());
+            log.info(
+                    "Uploaded AgentSpec draft with overwrite, agentSpecName={}",
+                    ref.getAgentSpecName());
         }
 
         productRepository.save(product);
@@ -95,7 +106,7 @@ public class WorkerServiceImpl implements WorkerService {
     public void deleteAgentSpec(String productId) {
         Product product = findProduct(productId);
         AgentSpecRef ref = getAgentSpecRef(productId, false);
-        if (ref == null || StrUtil.isBlank(ref.getAgentSpecName())) {
+        if (ref == null || Strings.isBlank(ref.getAgentSpecName())) {
             return;
         }
         execute(
@@ -112,7 +123,7 @@ public class WorkerServiceImpl implements WorkerService {
     @Override
     public List<FileTreeNode> getFileTree(String productId, String version) {
         AgentSpecRef ref = getAgentSpecRef(productId, false);
-        if (ref == null || StrUtil.isBlank(ref.getAgentSpecName())) {
+        if (ref == null || Strings.isBlank(ref.getAgentSpecName())) {
             return Collections.emptyList();
         }
 
@@ -122,7 +133,9 @@ public class WorkerServiceImpl implements WorkerService {
             AgentSpec agentSpec = fetchAgentSpec(ref, version);
             return buildFileTree(agentSpec);
         } catch (Exception e) {
-            log.warn("Failed to fetch file tree for AgentSpec {}", ref.getAgentSpecName());
+            log.warn(
+                    "Failed to fetch file tree for AgentSpec, agentSpecName={}",
+                    ref.getAgentSpecName());
             return Collections.emptyList();
         }
     }
@@ -141,7 +154,7 @@ public class WorkerServiceImpl implements WorkerService {
         Product product = findProduct(productId);
         AgentSpecRef ref = getAgentSpecRef(productId, false);
 
-        if (ref == null || StrUtil.isBlank(ref.getAgentSpecName())) {
+        if (ref == null || Strings.isBlank(ref.getAgentSpecName())) {
             return Collections.emptyList();
         }
 
@@ -155,12 +168,12 @@ public class WorkerServiceImpl implements WorkerService {
                                             ref.getNamespace(), ref.getAgentSpecName()));
         } catch (Exception e) {
             log.warn(
-                    "AgentSpec {} not found in Nacos, returning empty versions",
+                    "AgentSpec not found in Nacos, returning empty versions, agentSpecName={}",
                     ref.getAgentSpecName());
             return Collections.emptyList();
         }
 
-        if (meta == null || CollUtil.isEmpty(meta.getVersions())) {
+        if (meta == null || CollectionUtils.isEmpty(meta.getVersions())) {
             return Collections.emptyList();
         }
 
@@ -213,10 +226,7 @@ public class WorkerServiceImpl implements WorkerService {
 
         // Non-admin users can only see online versions
         if (!contextHolder.isAdministrator()) {
-            results =
-                    results.stream()
-                            .filter(v -> "online".equals(v.getStatus()))
-                            .collect(Collectors.toList());
+            results = results.stream().filter(v -> "online".equals(v.getStatus())).toList();
         }
 
         return results;
@@ -225,7 +235,7 @@ public class WorkerServiceImpl implements WorkerService {
     @Override
     public void publishVersion(String productId, String version) {
         AgentSpecRef ref = getAgentSpecRef(productId, true);
-        if (StrUtil.isBlank(ref.getAgentSpecName())) {
+        if (Strings.isBlank(ref.getAgentSpecName())) {
             throw new BusinessException(
                     ErrorCode.NOT_FOUND, Resources.AGENT_SPEC, ref.getAgentSpecName());
         }
@@ -234,7 +244,10 @@ public class WorkerServiceImpl implements WorkerService {
                 execute(
                         ref.getNacosId(),
                         s -> s.submit(ref.getNamespace(), ref.getAgentSpecName(), version));
-        log.info("Submitted AgentSpec {}, version {}", ref.getAgentSpecName(), submittedVersion);
+        log.info(
+                "Submitted AgentSpec, agentSpecName={}, version={}",
+                ref.getAgentSpecName(),
+                submittedVersion);
     }
 
     @Override
@@ -242,25 +255,26 @@ public class WorkerServiceImpl implements WorkerService {
             throws IOException {
         AgentSpecRef ref = getAgentSpecRef(productId, true);
 
-        // 先调用 Nacos HTTP API 下载，让 Nacos 增加下载计数
+        // Download through the Nacos HTTP API first so Nacos can update its download count.
         downloadFromNacos(ref, version, response);
     }
 
     /**
-     * 通过调用 Nacos HTTP API 下载 Worker ZIP 包，使 Nacos 自动增加下载计数
+     * Downloads the Worker ZIP package through the Nacos HTTP API so Nacos can update its download
+     * count.
      * API: GET /v3/console/ai/agentspecs/version/download?namespaceId=xxx&agentSpecName=xxx&version=xxx
      */
     private void downloadFromNacos(AgentSpecRef ref, String version, HttpServletResponse response)
             throws IOException {
         try {
             NacosInstance nacosInstance = nacosService.findNacosInstanceById(ref.getNacosId());
-            // 优先使用展示地址，不存在则使用 serverUrl
+            // Prefer the display URL and fall back to serverUrl.
             String nacosBaseUrl =
-                    StrUtil.isNotBlank(nacosInstance.getDisplayServerUrl())
+                    Strings.isNotBlank(nacosInstance.getDisplayServerUrl())
                             ? nacosInstance.getDisplayServerUrl()
                             : nacosInstance.getServerUrl();
 
-            // 构建 Nacos 下载 URL:
+            // Build the Nacos download URL:
             // /v3/console/ai/agentspecs/version/download?namespaceId=xxx&agentSpecName=xxx&version=xxx
             StringBuilder urlBuilder = new StringBuilder();
             urlBuilder.append(nacosBaseUrl);
@@ -273,45 +287,50 @@ public class WorkerServiceImpl implements WorkerService {
                     .append("&agentSpecName=")
                     .append(
                             java.net.URLEncoder.encode(
-                                    ref.getAgentSpecName(), StandardCharsets.UTF_8.name()));
-            if (StrUtil.isNotBlank(version)) {
+                                    ref.getAgentSpecName(), StandardCharsets.UTF_8));
+            if (Strings.isNotBlank(version)) {
                 urlBuilder
                         .append("&version=")
-                        .append(java.net.URLEncoder.encode(version, StandardCharsets.UTF_8.name()));
+                        .append(java.net.URLEncoder.encode(version, StandardCharsets.UTF_8));
             }
 
-            // 添加认证参数（如果 Nacos 有用户名密码）
-            if (StrUtil.isNotBlank(nacosInstance.getUsername())
-                    && StrUtil.isNotBlank(nacosInstance.getPassword())) {
+            // Add authentication parameters when Nacos username and password are configured.
+            if (Strings.isNotBlank(nacosInstance.getUsername())
+                    && Strings.isNotBlank(nacosInstance.getPassword())) {
                 urlBuilder
                         .append("&username=")
                         .append(
                                 java.net.URLEncoder.encode(
-                                        nacosInstance.getUsername(),
-                                        StandardCharsets.UTF_8.name()));
+                                        nacosInstance.getUsername(), StandardCharsets.UTF_8));
                 urlBuilder
                         .append("&password=")
                         .append(
                                 java.net.URLEncoder.encode(
-                                        nacosInstance.getPassword(),
-                                        StandardCharsets.UTF_8.name()));
+                                        nacosInstance.getPassword(), StandardCharsets.UTF_8));
             }
 
             String downloadUrl = urlBuilder.toString();
-            // 日志中密码脱敏
-            String loggedUrl = downloadUrl.replaceAll("password=[^&]+", "password=***");
-            log.info("Calling Nacos download API: {}", loggedUrl);
+            log.info(
+                    "Calling Nacos worker download API, dependency=Nacos,"
+                            + " operation=downloadWorkerZip, nacosId={}, namespace={},"
+                            + " agentSpecName={}, version={}, serverUrl={}, username={}",
+                    ref.getNacosId(),
+                    ref.getNamespace(),
+                    ref.getAgentSpecName(),
+                    version,
+                    nacosInstance.getServerUrl(),
+                    nacosInstance.getUsername());
 
-            // 创建 HTTP 连接
-            java.net.URL url = new java.net.URL(downloadUrl);
-            java.net.HttpURLConnection conn = (java.net.HttpURLConnection) url.openConnection();
+            // Create the HTTP connection.
+            URL url = new URL(downloadUrl);
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setConnectTimeout(30000);
             conn.setReadTimeout(60000);
 
             int responseCode = conn.getResponseCode();
             if (responseCode == java.net.HttpURLConnection.HTTP_OK) {
-                // 设置响应头
+                // Set response headers.
                 response.setContentType("application/zip");
                 String encodedName =
                         java.net.URLEncoder.encode(
@@ -320,26 +339,49 @@ public class WorkerServiceImpl implements WorkerService {
                 response.setHeader(
                         "Content-Disposition", "attachment; filename*=UTF-8''" + encodedName);
 
-                // 流式传输 ZIP 文件
+                // Stream the ZIP file.
                 try (var input = conn.getInputStream();
                         var output = response.getOutputStream()) {
                     input.transferTo(output);
                 }
-                log.info("Downloaded worker {} from Nacos successfully", ref.getAgentSpecName());
+                log.info(
+                        "Downloaded worker ZIP from Nacos, dependency=Nacos,"
+                                + " operation=downloadWorkerZip, nacosId={}, namespace={},"
+                                + " agentSpecName={}, version={}",
+                        ref.getNacosId(),
+                        ref.getNamespace(),
+                        ref.getAgentSpecName(),
+                        version);
             } else {
-                log.warn("Nacos download API returned non-OK status: {}", responseCode);
-                // 降级为本地生成 ZIP
+                log.warn(
+                        "Nacos worker download API returned non-OK status, dependency=Nacos,"
+                                + " operation=downloadWorkerZip, nacosId={}, namespace={},"
+                                + " agentSpecName={}, status={}",
+                        ref.getNacosId(),
+                        ref.getNamespace(),
+                        ref.getAgentSpecName(),
+                        responseCode);
+                // Fall back to local ZIP generation.
                 fallbackToLocalDownload(ref, version, response);
             }
         } catch (Exception e) {
-            log.warn("Failed to download from Nacos, fallback to local generation", e);
-            // 降级为本地生成 ZIP
+            log.warn(
+                    "Failed to download worker ZIP from Nacos, falling back to local generation,"
+                            + " dependency=Nacos, operation=downloadWorkerZip, nacosId={},"
+                            + " namespace={}, agentSpecName={}, errorType={}, errorMessage={}",
+                    ref.getNacosId(),
+                    ref.getNamespace(),
+                    ref.getAgentSpecName(),
+                    e.getClass().getSimpleName(),
+                    e.getMessage(),
+                    e);
+            // Fall back to local ZIP generation.
             fallbackToLocalDownload(ref, version, response);
         }
     }
 
     /**
-     * 降级方案：本地生成 ZIP 包（不增加 Nacos 下载计数）
+     * Fallback path: generates the ZIP package locally without increasing the Nacos download count.
      */
     private void fallbackToLocalDownload(
             AgentSpecRef ref, String version, HttpServletResponse response) throws IOException {
@@ -369,7 +411,7 @@ public class WorkerServiceImpl implements WorkerService {
                         continue;
                     }
                     String path =
-                            StrUtil.isNotBlank(resource.getType())
+                            Strings.isNotBlank(resource.getType())
                                     ? resource.getType() + "/" + resource.getName()
                                     : resource.getName();
                     Map<String, Object> meta = resource.getMetadata();
@@ -397,10 +439,10 @@ public class WorkerServiceImpl implements WorkerService {
                     return null;
                 });
         log.info(
-                "{}: AgentSpec {}, version {}",
-                online ? "Online" : "Offline",
+                "Changed AgentSpec version status, agentSpecName={}, version={}, online={}",
                 ref.getAgentSpecName(),
-                version);
+                version,
+                online);
 
         syncProductStatusAfterVersionChange(product, ref);
     }
@@ -421,16 +463,14 @@ public class WorkerServiceImpl implements WorkerService {
 
         List<VersionResult> versions = listVersions(productId);
         List<VersionResult> onlineVersions =
-                versions.stream()
-                        .filter(v -> "online".equals(v.getStatus()))
-                        .collect(Collectors.toList());
+                versions.stream().filter(v -> "online".equals(v.getStatus())).toList();
 
         if (onlineVersions.isEmpty()) {
             throw new BusinessException(
                     ErrorCode.NOT_FOUND, "version", "No online version available");
         }
 
-        if (StrUtil.isBlank(version)) {
+        if (Strings.isBlank(version)) {
             return onlineVersions.get(onlineVersions.size() - 1).getVersion();
         }
 
@@ -447,9 +487,9 @@ public class WorkerServiceImpl implements WorkerService {
      *
      * <p>Rules:
      * <ul>
-     *   <li>Has online version + non-PUBLISHED → set to READY</li>
-     *   <li>No online version + non-PUBLISHED → set to PENDING</li>
-     *   <li>No online version + PUBLISHED → downgrade to READY</li>
+     *   <li>Has online version + non-PUBLISHED -> set to READY</li>
+     *   <li>No online version + non-PUBLISHED -> set to PENDING</li>
+     *   <li>No online version + PUBLISHED -> downgrade to READY</li>
      * </ul>
      *
      * <p>Wrapped in try-catch so failures don't break the main operation.
@@ -464,7 +504,7 @@ public class WorkerServiceImpl implements WorkerService {
                                             ref.getNamespace(), ref.getAgentSpecName()));
 
             boolean hasOnline = false;
-            if (meta != null && CollUtil.isNotEmpty(meta.getVersions())) {
+            if (meta != null && !CollectionUtils.isEmpty(meta.getVersions())) {
                 hasOnline =
                         meta.getVersions().stream()
                                 .anyMatch(
@@ -492,14 +532,15 @@ public class WorkerServiceImpl implements WorkerService {
                 product.setStatus(target);
                 productRepository.save(product);
                 log.info(
-                        "Synced product {} status: {} → {}",
+                        "Synced product status, productId={}, previousStatus={}, currentStatus={}",
                         product.getProductId(),
                         current,
                         target);
             }
         } catch (Exception e) {
             log.warn(
-                    "Failed to sync product status after version change for AgentSpec {}",
+                    "Failed to sync product status after version change for AgentSpec,"
+                            + " agentSpecName={}",
                     ref.getAgentSpecName(),
                     e);
         }
@@ -516,9 +557,10 @@ public class WorkerServiceImpl implements WorkerService {
                         s -> s.deleteDraft(ref.getNamespace(), ref.getAgentSpecName()));
         if (!deleted) {
             log.warn(
-                    "Nacos returned false for deleteDraft of AgentSpec {}", ref.getAgentSpecName());
+                    "Nacos returned false for AgentSpec draft deletion, agentSpecName={}",
+                    ref.getAgentSpecName());
         }
-        log.info("Deleted draft for AgentSpec {}", ref.getAgentSpecName());
+        log.info("Deleted AgentSpec draft, agentSpecName={}", ref.getAgentSpecName());
 
         // Clear agentSpecName if no versions remain after deletion
         try {
@@ -532,7 +574,7 @@ public class WorkerServiceImpl implements WorkerService {
             // Auto-publish approved reviewing version to clear the blocking state
             autoPublishReviewingVersion(ref, meta);
 
-            if (meta == null || CollUtil.isEmpty(meta.getVersions())) {
+            if (meta == null || CollectionUtils.isEmpty(meta.getVersions())) {
                 // If no versions remain, delete the AgentSpec
                 execute(
                         ref.getNacosId(),
@@ -546,14 +588,15 @@ public class WorkerServiceImpl implements WorkerService {
                 config.setAgentSpecName(null);
                 productRepository.save(product);
             } else {
-                // Versions still remain — sync Product status
+                // Versions still remain, so sync Product status.
                 // (auto-publish may have created a new online version)
                 syncProductStatusAfterVersionChange(product, ref);
             }
         } catch (Exception e) {
             // AgentSpec no longer exists in Nacos
             log.info(
-                    "AgentSpec {} not found after draft deletion, clearing reference",
+                    "AgentSpec not found after draft deletion, clearing reference,"
+                            + " agentSpecName={}",
                     ref.getAgentSpecName());
             WorkerConfig config = product.getFeature().getWorkerConfig();
             config.setAgentSpecName(null);
@@ -585,7 +628,10 @@ public class WorkerServiceImpl implements WorkerService {
                                 ref.getAgentSpecName(),
                                 JsonUtil.toJson(labels)));
 
-        log.info("Set latest: AgentSpec {}, version {}", ref.getAgentSpecName(), version);
+        log.info(
+                "Set latest AgentSpec version, agentSpecName={}, version={}",
+                ref.getAgentSpecName(),
+                version);
     }
 
     private void ensurePublished(AgentSpecRef ref, String version) {
@@ -608,7 +654,8 @@ public class WorkerServiceImpl implements WorkerService {
                     ref.getNacosId(),
                     s -> s.publish(ref.getNamespace(), ref.getAgentSpecName(), version, false));
             log.info(
-                    "Auto-published AgentSpec {} version {} to clear reviewing state",
+                    "Auto-published AgentSpec version to clear reviewing state,"
+                            + " agentSpecName={}, version={}",
                     ref.getAgentSpecName(),
                     version);
         }
@@ -622,7 +669,7 @@ public class WorkerServiceImpl implements WorkerService {
      * @return AgentSpec
      */
     private AgentSpec fetchAgentSpec(AgentSpecRef ref, String version) {
-        if (StrUtil.isBlank(ref.getAgentSpecName())) {
+        if (Strings.isBlank(ref.getAgentSpecName())) {
             throw new BusinessException(
                     ErrorCode.NOT_FOUND, Resources.AGENT_SPEC, ref.getAgentSpecName());
         }
@@ -630,7 +677,7 @@ public class WorkerServiceImpl implements WorkerService {
         return execute(
                 ref.getNacosId(),
                 s ->
-                        StrUtil.isBlank(version)
+                        Strings.isBlank(version)
                                 ? s.getAgentSpecDetail(ref.getNamespace(), ref.getAgentSpecName())
                                 : s.getAgentSpecVersionDetail(
                                         ref.getNamespace(), ref.getAgentSpecName(), version));
@@ -640,7 +687,7 @@ public class WorkerServiceImpl implements WorkerService {
         AgentSpec spec = fetchAgentSpec(ref, version);
 
         if ("manifest.json".equals(path)) {
-            String content = StrUtil.nullToDefault(spec.getContent(), "");
+            String content = spec.getContent() == null ? "" : spec.getContent();
             return FileContentResult.builder()
                     .path("manifest.json")
                     .content(content)
@@ -649,12 +696,12 @@ public class WorkerServiceImpl implements WorkerService {
                     .build();
         }
 
-        String specNamePrefix = StrUtil.isNotBlank(spec.getName()) ? spec.getName() + "/" : "";
+        String specNamePrefix = Strings.isNotBlank(spec.getName()) ? spec.getName() + "/" : "";
 
         if (spec.getResource() != null) {
             for (AgentSpecResource resource : spec.getResource().values()) {
                 String resourcePath =
-                        StrUtil.isNotBlank(resource.getType())
+                        Strings.isNotBlank(resource.getType())
                                 ? resource.getType() + "/" + resource.getName()
                                 : resource.getName();
 
@@ -669,7 +716,7 @@ public class WorkerServiceImpl implements WorkerService {
                             meta != null && meta.containsKey("encoding")
                                     ? java.lang.String.valueOf(meta.get("encoding"))
                                     : "text";
-                    String content = StrUtil.nullToDefault(resource.getContent(), "");
+                    String content = resource.getContent() == null ? "" : resource.getContent();
                     return FileContentResult.builder()
                             .path(resourcePath)
                             .content(content)
@@ -692,13 +739,13 @@ public class WorkerServiceImpl implements WorkerService {
                 createFileNode("manifest.json", "manifest.json", spec.getContent(), "text"));
 
         // Strip spec name prefix from resource paths if Nacos prepends it.
-        String specNamePrefix = StrUtil.isNotBlank(spec.getName()) ? spec.getName() + "/" : "";
+        String specNamePrefix = Strings.isNotBlank(spec.getName()) ? spec.getName() + "/" : "";
 
         // Add resources
         if (spec.getResource() != null) {
             for (AgentSpecResource resource : spec.getResource().values()) {
                 String resourcePath =
-                        StrUtil.isNotBlank(resource.getType())
+                        Strings.isNotBlank(resource.getType())
                                 ? resource.getType() + "/" + resource.getName()
                                 : resource.getName();
 
@@ -760,7 +807,7 @@ public class WorkerServiceImpl implements WorkerService {
         sortNodes(rootChildren);
 
         // Wrap children under a root directory node named after the AgentSpec
-        String rootName = StrUtil.isNotBlank(spec.getName()) ? spec.getName() : "worker";
+        String rootName = Strings.isNotBlank(spec.getName()) ? spec.getName() : "worker";
         FileTreeNode rootNode = new FileTreeNode();
         rootNode.setName(rootName);
         rootNode.setPath("__root__");
@@ -815,13 +862,14 @@ public class WorkerServiceImpl implements WorkerService {
                         .findByProductId(productId)
                         .map(Product::getFeature)
                         .map(ProductFeature::getWorkerConfig)
-                        .filter(wc -> StrUtil.isNotBlank(wc.getNacosId()))
+                        .filter(wc -> Strings.isNotBlank(wc.getNacosId()))
                         .map(wc -> new AgentSpecRef().convertFrom(wc))
                         .orElse(null);
 
         if (force && result == null) {
             throw new BusinessException(
-                    ErrorCode.INVALID_REQUEST, "Worker config not found for product: " + productId);
+                    ErrorCode.INVALID_REQUEST,
+                    String.format("Worker config not found for product: %s", productId));
         }
         return result;
     }
@@ -841,7 +889,7 @@ public class WorkerServiceImpl implements WorkerService {
             return;
         }
         String reviewing = meta.getReviewingVersion();
-        if (StrUtil.isBlank(reviewing)) {
+        if (Strings.isBlank(reviewing)) {
             return;
         }
         try {
@@ -849,16 +897,18 @@ public class WorkerServiceImpl implements WorkerService {
                     ref.getNacosId(),
                     s -> s.publish(ref.getNamespace(), ref.getAgentSpecName(), reviewing, true));
             log.info(
-                    "Auto-published reviewing version {} for AgentSpec {} to unblock draft"
-                            + " operations",
+                    "Auto-published reviewing AgentSpec version to unblock draft operations,"
+                            + " version={}, agentSpecName={}",
                     reviewing,
                     ref.getAgentSpecName());
         } catch (Exception e) {
             log.warn(
-                    "Failed to auto-publish reviewing version {} for AgentSpec {}: {}",
+                    "Failed to auto-publish reviewing AgentSpec version, version={},"
+                            + " agentSpecName={}, errorMessage={}",
                     reviewing,
                     ref.getAgentSpecName(),
-                    e.getMessage());
+                    e.getMessage(),
+                    e);
         }
     }
 
@@ -867,7 +917,11 @@ public class WorkerServiceImpl implements WorkerService {
             AiMaintainerService service = nacosService.getAiMaintainerService(nacosId);
             return operation.execute(service.agentSpec());
         } catch (NacosException e) {
-            log.error("Nacos operation failed", e);
+            log.error(
+                    "Nacos AgentSpec operation failed, nacosId={}, errorMessage={}",
+                    nacosId,
+                    e.getMessage(),
+                    e);
             throw toBusinessException(e);
         }
     }
@@ -905,24 +959,24 @@ public class WorkerServiceImpl implements WorkerService {
         WorkerConfig config = product.getFeature().getWorkerConfig();
 
         if (config == null
-                || StrUtil.isBlank(config.getNacosId())
-                || StrUtil.isBlank(config.getAgentSpecName())) {
+                || Strings.isBlank(config.getNacosId())
+                || Strings.isBlank(config.getAgentSpecName())) {
             return null;
         }
 
         try {
             var nacos = nacosService.getNacosInstance(config.getNacosId());
-            if (nacos == null || StrUtil.isBlank(nacos.getServerUrl())) {
+            if (nacos == null || Strings.isBlank(nacos.getServerUrl())) {
                 return null;
             }
             URL nacosUrl =
-                    URLUtil.url(
-                            StrUtil.isNotBlank(nacos.getDisplayServerUrl())
+                    new URL(
+                            Strings.isNotBlank(nacos.getDisplayServerUrl())
                                     ? nacos.getDisplayServerUrl()
                                     : nacos.getServerUrl());
             int port = nacosUrl.getPort();
             String namespace =
-                    StrUtil.isNotBlank(config.getNamespace())
+                    Strings.isNotBlank(config.getNamespace())
                             ? config.getNamespace()
                             : nacos.getDefaultNamespace();
             return CliDownloadInfo.builder()
@@ -933,7 +987,10 @@ public class WorkerServiceImpl implements WorkerService {
                     .resourceType("worker")
                     .build();
         } catch (Exception e) {
-            log.warn("Failed to get CLI download info for worker product {}", productId, e);
+            log.warn(
+                    "Failed to get CLI download info for worker product, productId={}",
+                    productId,
+                    e);
             return null;
         }
     }
@@ -966,7 +1023,7 @@ public class WorkerServiceImpl implements WorkerService {
 
                 // Skip if product already exists
                 if (productRepository.findByNameAndAdminId(name, adminId).isPresent()) {
-                    log.info("Worker product '{}' already exists, skipping", name);
+                    log.info("Worker product already exists, skipping import, name={}", name);
                     skippedCount++;
                     continue;
                 }
@@ -999,15 +1056,19 @@ public class WorkerServiceImpl implements WorkerService {
 
                 productRepository.save(product);
                 successCount++;
-                log.info("Imported worker product '{}' from Nacos", name);
+                log.info("Imported worker product from Nacos, name={}", name);
             }
         } catch (Exception e) {
-            log.error("Failed to import workers from Nacos", e);
+            log.error("Failed to import workers from Nacos, errorMessage={}", e.getMessage(), e);
             throw new BusinessException(
-                    ErrorCode.INTERNAL_ERROR, "Failed to import workers: " + e.getMessage());
+                    ErrorCode.INTERNAL_ERROR,
+                    String.format("Failed to import workers: %s", e.getMessage()));
         }
 
-        log.info("Imported {} worker products from Nacos, skipped {}", successCount, skippedCount);
+        log.info(
+                "Imported worker products from Nacos, successCount={}, skippedCount={}",
+                successCount,
+                skippedCount);
 
         return ImportResult.builder()
                 .resourceType("worker")
